standards/gnds-2.0-alpha/alpha/c/src/v2.0/common/Axes.h

// --- Const-aware handles.
typedef const struct AxesClass *const ConstHandle2ConstAxes;
typedef       struct AxesClass *const ConstHandle2Axes;
// +++ Set, by index \in [0,size)
extern_c void
AxesGridSet(
   ConstHandle2Axes This,
   const size_t index_,
   ConstHandle2ConstGrid grid
);
// +++ Has, by index
extern_c int
AxesGridHasByIndex(
   ConstHandle2ConstAxes This,
   const int index
);
// --- Get, by index, const
extern_c Handle2ConstGrid
AxesGridGetByIndexConst(
   ConstHandle2ConstAxes This,
   const int index
);
// +++ Get, by index, non-const
extern_c Handle2Grid
AxesGridGetByIndex(
   ConstHandle2Axes This,
   const int index
);
// +++ Set, by index
extern_c void
AxesGridSetByIndex(
   ConstHandle2Axes This,
   const int index,
   ConstHandle2ConstGrid grid
);
// +++ Has, by label
extern_c int
AxesGridHasByLabel(
   ConstHandle2ConstAxes This,
   const char *const label
);
// --- Get, by label, const
extern_c Handle2ConstGrid
AxesGridGetByLabelConst(
   ConstHandle2ConstAxes This,
   const char *const label
);
// +++ Get, by label, non-const
extern_c Handle2Grid
AxesGridGetByLabel(
   ConstHandle2Axes This,
   const char *const label
);
// +++ Set, by label
extern_c void
AxesGridSetByLabel(
   ConstHandle2Axes This,
   const char *const label,
   ConstHandle2ConstGrid grid
);
// +++ Has, by unit
extern_c int
AxesGridHasByUnit(
   ConstHandle2ConstAxes This,
   const char *const unit
);
// --- Get, by unit, const
extern_c Handle2ConstGrid
AxesGridGetByUnitConst(
   ConstHandle2ConstAxes This,
   const char *const unit
);
// +++ Get, by unit, non-const
extern_c Handle2Grid
AxesGridGetByUnit(
   ConstHandle2Axes This,
   const char *const unit
);
// +++ Set, by unit
extern_c void
AxesGridSetByUnit(
   ConstHandle2Axes This,
   const char *const unit,
   ConstHandle2ConstGrid grid
);
// +++ Has, by style
extern_c int
AxesGridHasByStyle(
   ConstHandle2ConstAxes This,
   const char *const style
);
// --- Get, by style, const
extern_c Handle2ConstGrid
AxesGridGetByStyleConst(
   ConstHandle2ConstAxes This,
   const char *const style
);
// +++ Get, by style, non-const
extern_c Handle2Grid
AxesGridGetByStyle(
   ConstHandle2Axes This,
   const char *const style
);
// +++ Set, by style
extern_c void
AxesGridSetByStyle(
   ConstHandle2Axes This,
   const char *const style,
   ConstHandle2ConstGrid grid
);
// +++ Has, by interpolation
extern_c int
AxesGridHasByInterpolation(
   ConstHandle2ConstAxes This,
   const char *const interpolation
);
// --- Get, by interpolation, const
extern_c Handle2ConstGrid
AxesGridGetByInterpolationConst(
   ConstHandle2ConstAxes This,
   const char *const interpolation
);
// +++ Get, by interpolation, non-const
extern_c Handle2Grid
AxesGridGetByInterpolation(
   ConstHandle2Axes This,
   const char *const interpolation
);
// +++ Set, by interpolation
extern_c void
AxesGridSetByInterpolation(
   ConstHandle2Axes This,
   const char *const interpolation,
   ConstHandle2ConstGrid grid
);