versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Axes.f03


!! Set, by index \in [0,size)
subroutine AxesGridSet(handle, index, fieldHandle) &
      bind(C, name='AxesGridSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine AxesGridSet

!! ------------------------
!! Re: metadatum index
!! ------------------------

!! Has, by index
function AxesGridHasByIndex(handle, meta) &
      bind(C, name='AxesGridHasByIndex') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   integer(c_int) :: has
end function AxesGridHasByIndex

!! Get, by index, const
function AxesGridGetByIndexConst(handle, meta) &
      bind(C, name='AxesGridGetByIndexConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function AxesGridGetByIndexConst

!! Get, by index
function AxesGridGetByIndex(handle, meta) &
      bind(C, name='AxesGridGetByIndex') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function AxesGridGetByIndex

!! Set, by index
subroutine AxesGridSetByIndex(handle, meta, fieldHandle) &
      bind(C, name='AxesGridSetByIndex')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine AxesGridSetByIndex

!! ------------------------
!! Re: metadatum label
!! ------------------------

!! Has, by label
function AxesGridHasByLabel(handle, meta, metaSize) &
      bind(C, name='AxesGridHasByLabel') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function AxesGridHasByLabel

!! Get, by label, const
function AxesGridGetByLabelConst(handle, meta, metaSize) &
      bind(C, name='AxesGridGetByLabelConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function AxesGridGetByLabelConst

!! Get, by label
function AxesGridGetByLabel(handle, meta, metaSize) &
      bind(C, name='AxesGridGetByLabel') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function AxesGridGetByLabel

!! Set, by label
subroutine AxesGridSetByLabel(handle, meta, metaSize, fieldHandle) &
      bind(C, name='AxesGridSetByLabel')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine AxesGridSetByLabel

!! ------------------------
!! Re: metadatum unit
!! ------------------------

!! Has, by unit
function AxesGridHasByUnit(handle, meta, metaSize) &
      bind(C, name='AxesGridHasByUnit') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function AxesGridHasByUnit

!! Get, by unit, const
function AxesGridGetByUnitConst(handle, meta, metaSize) &
      bind(C, name='AxesGridGetByUnitConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function AxesGridGetByUnitConst

!! Get, by unit
function AxesGridGetByUnit(handle, meta, metaSize) &
      bind(C, name='AxesGridGetByUnit') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function AxesGridGetByUnit

!! Set, by unit
subroutine AxesGridSetByUnit(handle, meta, metaSize, fieldHandle) &
      bind(C, name='AxesGridSetByUnit')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine AxesGridSetByUnit

!! ------------------------
!! Re: metadatum style
!! ------------------------

!! Has, by style
function AxesGridHasByStyle(handle, meta, metaSize) &
      bind(C, name='AxesGridHasByStyle') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function AxesGridHasByStyle

!! Get, by style, const
function AxesGridGetByStyleConst(handle, meta, metaSize) &
      bind(C, name='AxesGridGetByStyleConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function AxesGridGetByStyleConst

!! Get, by style
function AxesGridGetByStyle(handle, meta, metaSize) &
      bind(C, name='AxesGridGetByStyle') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function AxesGridGetByStyle

!! Set, by style
subroutine AxesGridSetByStyle(handle, meta, metaSize, fieldHandle) &
      bind(C, name='AxesGridSetByStyle')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine AxesGridSetByStyle

!! ------------------------
!! Re: metadatum interpolation
!! ------------------------

!! Has, by interpolation
function AxesGridHasByInterpolation(handle, meta, metaSize) &
      bind(C, name='AxesGridHasByInterpolation') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function AxesGridHasByInterpolation

!! Get, by interpolation, const
function AxesGridGetByInterpolationConst(handle, meta, metaSize) &
      bind(C, name='AxesGridGetByInterpolationConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function AxesGridGetByInterpolationConst

!! Get, by interpolation
function AxesGridGetByInterpolation(handle, meta, metaSize) &
      bind(C, name='AxesGridGetByInterpolation') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function AxesGridGetByInterpolation

!! Set, by interpolation
subroutine AxesGridSetByInterpolation(handle, meta, metaSize, fieldHandle) &
      bind(C, name='AxesGridSetByInterpolation')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine AxesGridSetByInterpolation


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalAxes
